--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,5 @@
-.App {
-  text-align: center;
-}
-
 .App-logo {
-  height: 40vmin;
+  height: 48px;
   pointer-events: none;
 }
 
@@ -13,21 +9,6 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -35,4 +16,41 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+html {
+  height: 100%;
+}
+
+body {
+  background-color: #fff;
+  font-family: 나눔고딕, open sans, sans-serif;
+  font-size: 14px;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+main {
+  flex: 1 0 auto;
+  padding: 20px;
+}
+
+header {
+  display: flex;
+  align-items: center;
+}
+
+header h1 {
+  margin-left: -10px;
+}
+
+footer {
+  background-color: #fcfcfc;
+  color: #cfcfcf;
+  text-align: center;
+  padding: 20px;
 }
